# Archiver

./: .gitignore  CMakeLists.txt  LZ77.h  ReadWrite.h  ShannonFano.h
src/: CMakeLists.txt  EntropyCalculator.h  LZ77.cpp  LZ77.h  ReadWrite.cpp  ReadWrite.h  ShannonFano.cpp  ShannonFano.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h  main.cpp
test/: CMakeLists.txt  LZ77Test.cpp  ReadWriteTest.cpp  ShannonFanoTest.cpp  TimetTest.cpp  UtilityTest.cpp
test/test_data/: archiver_test_1  archiver_test_1 2.lz7710  archiver_test_2  archiver_test_3 2
